syntax = "proto3";

package user;

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message Empty {}

message UserList {
  repeated User users = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message UserId {
  int32 id = 1;
}

service UserService {
  rpc GetUsers (Empty) returns (UserList);
  rpc CreateUser (CreateUserRequest) returns (User);
  rpc DeleteUser (UserId) returns (Empty);
}